--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: "Brian Nguyen"
 url: https://www.brianqhnguyen.me
 author: "Brian Nguyen"
-description: "CS student at University of Texas at Dallas
+description: "CS student at University of Texas at Dallas"
